--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -103,14 +103,14 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:background="#5D44FF"
+        android:gravity="center"
         android:lineSpacingMultiplier="1.19"
         android:padding="10dp"
-        android:gravity="center"
         android:text="Next"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
